<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Rasitha.Functionality.RegisterActivityRaz"
    android:background="@drawable/bg">
    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout_raz"/>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@id/toolbar"
        android:padding="16dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create a new account"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            app:met_floatingLabel="normal"
            android:hint="Username"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailraz"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="normal"
            android:hint="Email"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            app:met_floatingLabel="normal"
            android:hint="Password"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/f_name"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            android:hint="First Name"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/l_name"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            android:hint="Last Name"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mobile"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            android:hint="Mobile"/>
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:id="@+id/btn_register"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:layout_marginTop="10dp"/>



    </LinearLayout>
</RelativeLayout>